# projetostreamlit

./: Cadastro.py  clientes.csv  pyproject.toml
pages/: Consulta.py
